assets/css/style.css
/* ... */
/**
 * responsive larger than 768px screen
 */

@media (min-width: 768px) {

  /**
   * REUSED STYLE
   */

  .sidebar,
  article {
    width: 700px;
  }

  .has-scrollbar::-webkit-scrollbar-button {
    width: 100px;
  }



  /**
   * SIDEBAR
   */

  .contacts-list {
    grid-template-columns: 1fr 1fr;
    gap: 30px 15px;
  }



  /**
   * NAVBAR
   */

  .navbar-link {
    --fs-8: 15px !important;
  }



  /**
   * ABOUT
   */

  /* testimonials modal */

  .testimonials-modal {
    gap: 35px;
    max-width: 680px;
  }

  .modal-avatar-box img {
    width: 80px;
  }



  /**
   * PORTFOLIO
   */

  .article-title {
    padding-bottom: 20px;
  }

  .filter-select-box {
    display: none;
  }

  .filter-list {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 25px;
    padding-left: 5px;
    margin-bottom: 30px;
  }

  .filter-item button {
    color: var(--light-gray);
    font-size: var(--fs-5);
    transition: var(--transition-1);
  }

  .filter-item button:hover {
    color: var(--light-gray-70);
  }

  .filter-item button.active {
    color: var(--orange-yellow-crayola);
  }

  /* portfolio and blog grid */

  .project-list,
  .blog-posts-list {
    grid-template-columns: 1fr 1fr;
  }



  /**
   * CONTACT
   */

  .input-wrapper {
    grid-template-columns: 1fr 1fr;
  }

  .form-btn {
    width: max-content;
    margin-left: auto;
  }

}





/**
 * responsive larger than 1024px screen
 */

@media (min-width: 1024px) {

  /**
   * CUSTOM PROPERTY
   */

  :root {

    /**
    * shadow
    */

    --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.125);
    --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.125);
    --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.125);

  }



  /**
   * REUSED STYLE
   */

  .sidebar,
  article {
    width: 950px;
    box-shadow: var(--shadow-5);
  }



  /**
   * MAIN 
   */

  main {
    margin-bottom: 60px;
  }

  .main-content {
    position: relative;
    width: max-content;
    margin: auto;
  }



  /**
   * NAVBAR
   */

  .navbar {
    position: absolute !important;
    bottom: auto !important;
    top: 0 !important;
    left: auto !important;
    right: 0 !important;
    width: max-content !important;
    border-radius: 0 20px !important;
    padding: 0 20px !important;
    box-shadow: none !important;
  }

  .navbar-list {
    gap: 30px !important;
    padding: 0 20px !important;
  }

  .navbar-link {
    font-weight: var(--fw-500) !important;
  }



  /**
   * ABOUT
   */

  /* service */

  .service-list {
    grid-template-columns: 1fr 1fr;
    gap: 20px 25px;
  }

  /* testimonials */

  .testimonials-item {
    min-width: calc(50% - 15px);
  }

  /* clients */

  .clients-item {
    min-width: calc(25% - 38px);
  }



  /**
   * PORTFOLIO
   */

  .project-list {
    grid-template-columns: repeat(3, 1fr);
  }



  /**
   * BLOG
   */

  .blog-banner-box {
    height: 230px;
  }

}





/**
 * responsive larger than 1250px screen
 */

@media (min-width: 1250px) {

  /**
   * RESET
   */

  body::-webkit-scrollbar {
    width: 10px;
  }

  body::-webkit-scrollbar-track {
    background: var(--smoky-black);
  }

  body::-webkit-scrollbar-thumb {
    border: 2px solid var(--smoky-black);
    border-radius: 40px;
    background: hsla(0, 0%, 100%, 0.15);
    box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11),
    inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
  }
  
  body::-webkit-scrollbar-thumb:hover {
    background: #C7C8CC;
  }





  /**
   * REUSED STYLE
   */

  .sidebar,
  article {
    width: auto;
  }

  article {
    min-height: 100%;
  }



  /**
   * MAIN
   */

  main {
    max-width: 1200px;
    margin-inline: auto;
    display: flex;
    justify-content: center;
    align-items: stretch;
    gap: 25px;
  }

  .main-content {
    min-width: 75%;
    width: 75%;
    margin: 0;
  }



  /**
   * SIDEBAR
   */

  .sidebar {
    position: sticky;
    top: 60px;
    max-height: max-content;
    height: 100%;
    margin-bottom: 0;
    padding-top: 60px;
    z-index: 1;
  }

  .sidebar-info {
    flex-direction: column;
  }

  .avatar-box img {
    width: 150px;
  }

  .info-content .name {
    white-space: nowrap;
    text-align: center;
  }

  .info-content .title {
    margin: auto;
  }

  .info_more-btn {
    display: none;
  }

  .sidebar-info_more {
    opacity: 1;
    visibility: visible;
  }

  .contacts-list {
    grid-template-columns: 1fr;
  }

  .contact-info :is(.contact-link) {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .contact-info :is(.contact-link, time, address) {
    --fs-7: 14px;
    font-weight: var(--fw-300);
  }

  .separator:last-of-type {
    margin: 15px 0;
    opacity: 0;
  }

  .social-list {
    justify-content: center;
  }



  /**
	 * RESUME
	 */

  .timeline-text {
    max-width: 700px;
  }

}


.contact-form {
  display: flex;
  justify-content: center;
}

iframe {
  border: none;
  max-width: 100%;
  width: 100%;
  height: 900px;
  /* Adjust height as needed */
}

/* Media queries for mobile */

@media screen and (max-width: 608px) {
  .contact-form {
    flex-direction: column;
    align-items: center;
  }

  iframe {
    width: 100%;
    height: 700px;
    /* Adjust height for mobile */
  }
}


/* Styles for screens with a width between 320px and 440px */
@media (min-width: 320px) and (max-width: 440px) {
  .filter-list {
    flex-direction: row;
    justify-content: center;
    /* Center the items horizontally */
    gap: 5px;
    padding-left: 1px;
    margin-bottom: 10px;
  }

  .filter-item button {
    font-size: var(--fs-5);
  }
}

/* Styles for screens with a maximum width of 320px */
@media (min-width: 320px) and (max-width: 430px) {
  .filter-list {
    flex-direction: column;
    gap: 10px;
    padding-left: 0;
    margin-bottom: 20px;
  }

  .filter-item button {
    font-size: var(--fs-6);
    padding: 10px;
    width: 100%;
    text-align: left;
  }
}
/* ... */

